# vision-truck-trailer-amr

./: .gitignore  .gitlab-ci.yml  .gitmodules  Demo_startup.md  Docker_readme.md  Dockerfile  LICENSE  README.md
catkin_ws_offboard/src/simulator_truck_trailer_amr/: CMakeLists.txt  package.xml  setup.py
catkin_ws_offboard/src/simulator_truck_trailer_amr/config/: sim_params.yaml
catkin_ws_offboard/src/simulator_truck_trailer_amr/launch/: simulator.launch
catkin_ws_offboard/src/simulator_truck_trailer_amr/src/simulator_truck_trailer_amr/: helpers.py  simulator.py  simulator_ros.py
catkin_ws_onboard/: issue_kelo.txt
execution/: commands  rosexport_offboard  rosexport_onboard  run_demo_offboard  run_docker  run_sim
feedback_control_design/angular_speed_estimation/: angular_speed_filter_design.py  speed_estimator.py  truck_trailer_short_openloop_2022-05-04-13-13-45.bag
feedback_control_design/state_feedback/: Kfb.yaml  dlqr.py  model_linearization_casadi.py  model_linearization_sympy.py  (+2 more)
network_config/: BelkinG_config  PhoneMBos_config
offline_analysis/: analyze_experiment.py  data_handling.py  load_data_bag_save_json.py  make_comp_time_ASAP_plot.py  make_comp_time_plot_smart_initialization.py  make_tracking_plot.py
rockit_examples/: plot_trailer.py  simulator.py  trajectory.yaml  truck_multiple_trailers.py  truck_multiple_trailers_func.py  truck_trailer.py  truck_trailer_SH.py  truck_trailer_multistage_2stages.py  truck_trailer_multistage_3stages.py  truck_trailer_para.yaml  truck_trailer_sampler.py  truck_trailer_x_u.yaml
(+80 files in other folders)
