<?xml version="1.0"?>
<package format="2">
  <name>simulator_truck_trailer_amr</name>
  <version>0.0.1</version>
  <description> simulator_truck_trailer_amr
  </description>

  <maintainer email="mathias.bos@kuleuven.be"> </maintainer>

  <license>Closed</license>

  <url type="website"></url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>


  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
